fix: spacing faq and other styles in home page

--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -45,7 +45,7 @@
     }
 
     .aboutDesc {
-      font-size: 18px;
+      font-size: 16px;
       line-height: 32px;
       color: var(--secondary-neutral-color);
     }
@@ -472,6 +472,9 @@
   .acolhimentoCount {
     padding: 0 !important;
   }
+  .aboutDesc {
+    text-align: center;
+  }
   .resultadosHeader {
     p {
       font-size: 16px !important;
@@ -553,6 +556,29 @@
   .acolhimentoCount {
     flex-direction: column;
     align-items: normal !important;
+  }
+
+  .faq {
+    padding-top: 120px;
+  }
+
+  .faqHeader {
+    p {
+      font-size: 15px !important;
+      line-height: 24px !important;
+    }
+  }
+
+  .seeMoreMain {
+    div {
+      font-size: 18px !important;
+    }
+  }
+
+  .seeMoreText {
+    font-size: 16px !important;
+    line-height: 24px !important;
+    font-weight: 400 !important;
   }
 }
 
