--- a/src/components/Partners/styles.module.scss
+++ b/src/components/Partners/styles.module.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     gap: 40px;
     padding-bottom: 50px;
+    margin: 7.5rem 0;
 }
 
 .doadoresHeader {
@@ -35,5 +36,15 @@
 @include breakpoints.media(">tablet" and "<desktop") {
   .partLogos {
     gap: 10px !important;
+  }
+}
+
+@include breakpoints.media("<tablet") {
+  .doadoresHeader {
+    h1 {
+      font-size: 28px;
+      line-height: 32px;
+      max-width: 300px;
+    }
   }
 }
